crates/ty_server/tests/e2e/tsp/snapshots/e2e__tsp__get_type__get_type_whitespace.snap
---
source: crates/ty_server/tests/e2e/tsp/get_type.rs
expression: normalize_for_snapshot(whitespace_result)
---
{
  "aliasName": null,
  "category": 0,
  "categoryFlags": 0,
  "flags": 8,
  "handle": "test_handle_int",
  "name": "int"
}
